--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -12,11 +12,7 @@
   margin-bottom: 1px !important;
   transition: all 0.25s ease;
   .fc-event-title {
-    font-family: "Sono";
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 1px;
-    font-weight: 525;
+    @include monospaced(white, 14px);
     padding-left: 8px;
     padding-right: 8px;
     text-overflow: ellipsis;
@@ -341,16 +337,14 @@ $outline-color: #e6e6e6;
         border-top-color: transparent;
         .event-list-flyer-btn,
         .event-list-link-btn {
-          @include monospaced(white);
+          @include monospaced(white, 14px);
           display: flex;
           align-items: center;
           justify-content: center;
           height: 35px;
-          letter-spacing: 2px;
-          text-transform: uppercase;
           border-radius: 1px;
           background-color: var(--color-secondary);
-          padding-bottom: 4.5px;
+          padding-bottom: 4px;
           padding-left: 1rem;
           padding-right: 1rem;
           transition: all 0.25s ease;
