--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -2197,12 +2197,9 @@ section.pro-shop-body {
       }
     }
     .product {
-      font-family: "Sono";
-      text-transform: uppercase;
-      font-size: 14px;
+     @include monospaced(grey, 15px);
       padding-top: 7px;
       padding-left: 5px;
-      color: grey;
     }
   }
   &.foot-joy {
@@ -2472,12 +2469,7 @@ section.pro-shop-body {
       /* -webkit-text-stroke: 0.1px; */
     }
     .price {
-      color: rgb(139, 139, 139);
-      font-family: "Sono";
-      font-size: 14px;
-      text-transform: uppercase;
-      -webkit-text-stroke: 0.1px;
-      letter-spacing: 0.4px;
+      @include monospaced(rgb(139, 139, 139), 15px);
     }
     font-size: 17px;
     .img-box {
@@ -3196,7 +3188,6 @@ section.pro-shop-body {
               padding: 0;
               .product {
                 font-size: 12px;
-                letter-spacing: 0.2px;
                 padding-top: 0;
               }
             }
