--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -2129,6 +2129,9 @@ section.pro-shop-body {
         .height-100 {
           height: inherit;
         }
+        &.lane {
+          padding-top: 20rem
+        }
       }
       [class*="col"] {
         .shop-note {
@@ -2384,29 +2387,32 @@ section.pro-shop-body {
 
     .row {
       &.lined-row {
-        border-top: 1.25px solid rgb(230, 230, 230);
+        // border-top: 1.25px solid rgb(230, 230, 230);
         padding-top: 7rem;
+        &.lane {
+          padding-top: 20rem
+        }
       }
       [class*="col"] {
         .pga-member-logo {
-          width: 80px;
+          width: 70px;
           height: auto;
-          filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.005))
-            drop-shadow(0 2px 2px rgba(0, 0, 0, 0.01))
-            drop-shadow(0 4px 4px rgba(0, 0, 0, 0.02))
-            drop-shadow(0 8px 8px rgba(0, 0, 0, 0.03))
-            drop-shadow(0 16px 16px rgba(0, 0, 0, 0.04))
-            drop-shadow(0 32px 32px rgba(0, 0, 0, 0.05));
+          // filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.005))
+          //   drop-shadow(0 2px 2px rgba(0, 0, 0, 0.01))
+          //   drop-shadow(0 4px 4px rgba(0, 0, 0, 0.02))
+          //   drop-shadow(0 8px 8px rgba(0, 0, 0, 0.03))
+          //   drop-shadow(0 16px 16px rgba(0, 0, 0, 0.04))
+          //   drop-shadow(0 32px 32px rgba(0, 0, 0, 0.05));
         }
         h3 {
           padding-top: 2rem;
           margin-bottom: 0.75rem;
-          font-size: 37px;
+          font-size: 32px;
         }
         .shop-note {
           font-family: "IKOB Italic";
           margin-bottom: 10px;
-          font-size: 27px;
+          font-size: 19px;
           line-height: 140%;
           color: #484848;
         }
@@ -2467,13 +2473,14 @@ section.pro-shop-body {
     .note-title {
       font-size: 21px;
       padding-bottom: 0.5rem;
-      font-family: "Inter Medium";
+      font-family: "Inter";
       letter-spacing: -0.3px;
       line-height: 110%;
       /* -webkit-text-stroke: 0.1px; */
     }
     .price {
       @include monospaced(rgb(139, 139, 139), 15px);
+      font-size: 14px; 
     }
     font-size: 17px;
     .img-box {
