--- a/css/style.css
+++ b/css/style.css
@@ -12165,14 +12165,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(2deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(2deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12187,14 +12187,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12209,14 +12209,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(3) {
   z-index: 8;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(3):before {
   content: "3";
 }
 .slyde:nth-child(3).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12231,14 +12231,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12253,14 +12253,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12275,14 +12275,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12297,14 +12297,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-4deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-4deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12319,14 +12319,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(8) {
   z-index: 3;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(8):before {
   content: "8";
 }
 .slyde:nth-child(8).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12363,14 +12363,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -20387,6 +20387,9 @@ section.pro-shop-body > .container .row.lined-row {
 section.pro-shop-body > .container .row.lined-row .height-100 {
   height: inherit;
 }
+section.pro-shop-body > .container .row.lined-row.lane {
+  padding-top: 20rem;
+}
 section.pro-shop-body > .container .row [class*=col] .shop-note {
   font-family: "IKOB Italic";
   font-size: 23px;
@@ -20618,23 +20621,24 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
   height: 1.25px;
 }
 .instruction-page-body > .container .row.lined-row {
-  border-top: 1.25px solid rgb(230, 230, 230);
   padding-top: 7rem;
 }
+.instruction-page-body > .container .row.lined-row.lane {
+  padding-top: 20rem;
+}
 .instruction-page-body > .container .row [class*=col] .pga-member-logo {
-  width: 80px;
+  width: 70px;
   height: auto;
-  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.005)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.01)) drop-shadow(0 4px 4px rgba(0, 0, 0, 0.02)) drop-shadow(0 8px 8px rgba(0, 0, 0, 0.03)) drop-shadow(0 16px 16px rgba(0, 0, 0, 0.04)) drop-shadow(0 32px 32px rgba(0, 0, 0, 0.05));
 }
 .instruction-page-body > .container .row [class*=col] h3 {
   padding-top: 2rem;
   margin-bottom: 0.75rem;
-  font-size: 37px;
+  font-size: 32px;
 }
 .instruction-page-body > .container .row [class*=col] .shop-note {
   font-family: "IKOB Italic";
   margin-bottom: 10px;
-  font-size: 27px;
+  font-size: 19px;
   line-height: 140%;
   color: #484848;
 }
@@ -20689,7 +20693,7 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 .instruction-page-body .note-box .note-title {
   font-size: 21px;
   padding-bottom: 0.5rem;
-  font-family: "Inter Medium";
+  font-family: "Inter";
   letter-spacing: -0.3px;
   line-height: 110%;
   /* -webkit-text-stroke: 0.1px; */
@@ -20700,6 +20704,7 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
   letter-spacing: 0.5px;
   text-transform: lowercase;
   color: rgb(139, 139, 139);
+  font-size: 14px;
 }
 .instruction-page-body .note-box .img-box {
   background: white;
