Updating Board of Directors, Open Tournaments page, and Members Only Tournaments page.

--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -68,7 +68,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   text-decoration-color: var(--color-body);
-  background: #005f52;
+  // background: #005f52;
   @media #{$lg-layout} {
     overflow: hidden;
   }
