--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -269,7 +269,7 @@ section.sponsors-section {
     }
   }
   &-on-open-tournaments-page {
-    background: #fafafa;
+    // background: #fafafa;
     padding-top: 15rem;
     padding-bottom: 12rem;
     .container {
@@ -2246,6 +2246,34 @@ section.pro-shop-body {
     }
   }
 }
+.container {
+  // background: white;
+  .hr-group {
+    position: relative;
+    overflow: visible;
+    margin-bottom: 7rem;
+    margin-top: 3rem;
+    hr {
+      background-color: #b8b8b8;
+    }
+    &:after {
+      position: absolute;
+      height: 50px;
+      width: 50px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9;
+      padding: 10px;
+      background-size: 50%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-color: #ffffff;
+      content: "";
+      background-image: url(../assets/images/icons/trophy.svg);
+    }
+  }
+}
 
 //~ Leagues
 .league-page-body {
@@ -2355,10 +2383,11 @@ section.pro-shop-body {
               margin-bottom: 0.4rem;
             }
             p {
-              margin-bottom: 1.5rem;
+              margin-bottom: 0rem;
             }
             .pillock {
               // color: #4e8279;
+              margin-top: 1.5rem;
               border-color: rgb(167 177 175 / 58%);
               .pillock-icon {
                 width: 14px;
